--- a/app/src/main/res/layout/activity_second_page.xml
+++ b/app/src/main/res/layout/activity_second_page.xml
@@ -1,9 +1,11 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
+    android:background="@drawable/lifter">
 
     <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -14,22 +16,13 @@
         android:editable="true"
         android:id="@+id/textView2" />
 
-//Added OnClick for second page
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/imageButton"
-        android:layout_centerVertical="true"
-        android:background="@drawable/cross"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:onClick="open_second_page"/>
+    //Added OnClick for second page
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/editText"
-        android:text="Welcome to Training M8, the simplest, most versatile fitness calculator. Featuring Strength and Endurance performance assessment tools, Training M8 allows for the calculation for an athletes V02 Max, One Rep Max Lift, Percent Body Fat, and more."
+        android:text="So whether you&apos;re a powerlifter hoping to calculate a max lift based on in-season training, a runner hoping to estimate your aerobic capacity, or a fitness advocate hoping to estimate Body Mass Index and Percent Body Fat, Training M8 has features for everyone! "
         android:textColor="@android:color/white"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
