--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,8 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
+    android:background="@drawable/cross">
 
     <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -20,20 +21,21 @@
         android:layout_height="wrap_content"
         android:id="@+id/imageButton"
         android:layout_centerVertical="true"
-        android:background="@drawable/cross"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:onClick="open_second_page"/>
 
-    <EditText
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/editText"
-        android:text="Welcome to Training M8, the simplest, most versatile fitness calculator. Featuring Strength and Endurance performance assessment tools, Training M8 allows for the calculation for an athletes V02 Max, One Rep Max Lift, Percent Body Fat, and more."
-        android:textColor="@android:color/white"
+        android:text="Welcome to Training M8, the simplest, most versatile fitness calculator. Featuring Strength and Endurance performance assessment tools, Training M8 allows for the calculation for an athletes V02 Max, One Rep Max Lift, Percent Body Fat, and more. Tap here to continue!"
+        android:id="@+id/button"
+        android:textColor="#fffffcfe"
+        android:background="@android:color/black"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:textSize="15dp" />
+        android:layout_alignRight="@+id/textView2"
+        android:layout_alignEnd="@+id/textView2"
+        android:textSize="13dp"
+        android:onClick="open_second_page"/>
 
 </RelativeLayout>
