--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -27,7 +27,8 @@
         android:background="@android:color/background_dark"
         android:layout_marginTop="34dp"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:onClick="open_one_rep_max"/>
 
     <Button
         android:layout_width="wrap_content"
@@ -38,7 +39,8 @@
         android:background="@android:color/background_dark"
         android:layout_below="@+id/button2"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="34dp" />
+        android:layout_marginTop="34dp"
+        android:onClick="open_vo2max"/>
 
     <Button
         android:layout_width="wrap_content"
@@ -51,7 +53,8 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignRight="@+id/textView2"
-        android:layout_alignEnd="@+id/textView2" />
+        android:layout_alignEnd="@+id/textView2"
+        android:onClick="open_max_heart_rate"/>
 
     <Button
         android:layout_width="wrap_content"
@@ -63,7 +66,8 @@
         android:layout_below="@+id/button7"
         android:layout_marginTop="31dp"
         android:layout_alignRight="@+id/textView2"
-        android:layout_alignEnd="@+id/textView2" />
+        android:layout_alignEnd="@+id/textView2"
+        android:onClick="open_bmi"/>
 
     <Button
         android:layout_width="wrap_content"
@@ -74,7 +78,8 @@
         android:background="@android:color/background_dark"
         android:layout_below="@+id/button3"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="26dp" />
+        android:layout_marginTop="26dp"
+        android:onClick="open_percent_fat"/>
 
     <Button
         android:layout_width="wrap_content"
@@ -86,7 +91,8 @@
         android:layout_marginTop="28dp"
         android:layout_below="@+id/button6"
         android:layout_alignRight="@+id/textView2"
-        android:layout_alignEnd="@+id/textView2" />
+        android:layout_alignEnd="@+id/textView2"
+        android:onClick="open_muscle_composition"/>
 
 </RelativeLayout>
 
