--- a/app/src/main/res/layout/activity_maxheartrate.xml
+++ b/app/src/main/res/layout/activity_maxheartrate.xml
@@ -2,6 +2,88 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/cyclist">
+    android:background="@drawable/cyclist"
+    android:weightSum="1">
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/editText7"
+        android:text="                         Gender:"
+        android:textColor="@android:color/black"
+        android:textStyle="bold"
+        android:textSize="25dp"
+        android:background="#ff0effad"
+        android:layout_marginTop="1dp"
+        android:layout_weight="0.05" />
+
+    <RadioButton
+        android:layout_width="115dp"
+        android:layout_height="wrap_content"
+        android:text="Male"
+        android:id="@+id/radioButton2"
+        android:layout_gravity="center_horizontal"
+        android:background="@android:color/white"
+        android:layout_marginTop="5dp"
+        android:checked="false"
+        android:textStyle="bold"
+        android:textSize="22dp" />
+
+    <RadioButton
+        android:layout_width="115dp"
+        android:layout_height="wrap_content"
+        android:text="Female"
+        android:id="@+id/radioButton"
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="0.05"
+        android:background="@android:color/white"
+        android:layout_marginTop="5dp"
+        android:checked="false"
+        android:textStyle="bold"
+        android:textSize="22dp" />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/editText5"
+        android:text="                           Age:"
+        android:textColor="@android:color/black"
+        android:textStyle="bold"
+        android:textSize="25dp"
+        android:background="#ff0effad"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="75dp"
+        android:layout_weight="0.05" />
+
+    <EditText
+        android:layout_width="80dp"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:ems="10"
+        android:id="@+id/editText6"
+        android:text="0"
+        android:textColor="@android:color/black"
+        android:textSize="29dp"
+        android:layout_gravity="center_horizontal"
+        android:textStyle="bold"
+        android:background="@android:color/white"
+        android:layout_marginTop="5dp" />
+
+    <ImageButton
+        android:layout_width="230dp"
+        android:layout_height="90dp"
+        android:id="@+id/imageButton2"
+        android:background="@drawable/calculateButton"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="105dp"/>
+
+    <ImageButton
+        android:layout_width="230dp"
+        android:layout_height="35dp"
+        android:id="@+id/imageButton3"
+        android:background="@drawable/previous"
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="0.05"
+        android:layout_marginTop="25dp"/>
 
 </LinearLayout>
