--- a/app/src/main/res/layout/activity_percent_body_fat_results.xml
+++ b/app/src/main/res/layout/activity_percent_body_fat_results.xml
@@ -2,6 +2,52 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/metal">
+    android:background="@drawable/metal"
+    android:weightSum="1">
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="25dp"
+        android:id="@+id/editText19"
+        android:text="                      Your VO2 Max:"
+        android:textColor="@android:color/black"
+        android:textStyle="bold"
+        android:textSize="23dp"
+        android:background="#ff0effad"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="1dp" />
+
+    <EditText
+        android:layout_width="100dp"
+        android:layout_height="25dp"
+        android:inputType="number"
+        android:ems="10"
+        android:id="@+id/editText20"
+        android:text="0"
+        android:textColor="@android:color/black"
+        android:layout_gravity="center_horizontal"
+        android:textSize="23dp"
+        android:textStyle="bold"
+        android:layout_marginTop="5dp"
+        android:background="@android:color/white"
+        android:autoText="false" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="330dp"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:id="@+id/textView"
+        android:background="@drawable/fatchart"
+        android:layout_marginTop="30dp"
+        android:layout_weight="0.61"
+        android:autoText="false" />
+
+    <ImageButton
+        android:layout_width="230dp"
+        android:layout_height="35dp"
+        android:id="@+id/imageButton3"
+        android:background="@drawable/previous"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="35dp"/>
 
 </LinearLayout>
