--- a/app/src/main/res/layout/activity_second_page.xml
+++ b/app/src/main/res/layout/activity_second_page.xml
@@ -28,6 +28,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:onClick="open_main_menu"/>
+        android:onClick="open_main_menu"
+        android:clickable="true" />
 
 </RelativeLayout>
