--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,6 +36,7 @@
         android:layout_alignRight="@+id/textView2"
         android:layout_alignEnd="@+id/textView2"
         android:textSize="13dp"
-        android:onClick="open_second_page"/>
+        android:onClick="open_second_page"
+        android:clickable="true" />
 
 </RelativeLayout>
