--- a/app/src/main/res/layout/activity_one_rep_max.xml
+++ b/app/src/main/res/layout/activity_one_rep_max.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Pounds (uncheck for Kilograms)"
-        android:id="@+id/checkBox"
+        android:id="@+id/weight_type"
         android:checked="true"
         android:background="@android:color/white"
         android:textStyle="bold"
@@ -34,7 +34,7 @@
         android:layout_height="wrap_content"
         android:inputType="number"
         android:ems="10"
-        android:id="@+id/editText2"
+        android:id="@+id/weight_lifted"
         android:text="0"
         android:textColor="@android:color/black"
         android:layout_gravity="center_horizontal"
@@ -62,7 +62,7 @@
         android:layout_height="wrap_content"
         android:inputType="number"
         android:ems="10"
-        android:id="@+id/editText4"
+        android:id="@+id/reps_completed"
         android:text="0"
         android:textColor="@android:color/black"
         android:textSize="29dp"
@@ -74,10 +74,12 @@
     <ImageButton
         android:layout_width="230dp"
         android:layout_height="90dp"
-        android:id="@+id/imageButton2"
+        android:id="@+id/calculate_one_rep_max"
         android:background="@drawable/calculate_button"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="85dp"/>
+        android:layout_marginTop="85dp"
+        android:onClick="open_one_rep_max_results"
+        android:clickable="true"/>
 
     <ImageButton
         android:layout_width="230dp"
