--- a/app/src/main/res/layout/one_rep_max_results.xml
+++ b/app/src/main/res/layout/one_rep_max_results.xml
@@ -3,6 +3,8 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/metal"
+
+
     >
 
     <EditText
@@ -22,7 +24,7 @@
         android:layout_height="wrap_content"
         android:inputType="number"
         android:ems="10"
-        android:id="@+id/editText2"
+        android:id="@+id/orm_results_window"
         android:text="0"
         android:textColor="@android:color/black"
         android:layout_gravity="center_horizontal"
@@ -30,7 +32,8 @@
         android:textStyle="bold"
         android:layout_marginTop="5dp"
         android:background="@android:color/white"
-        android:autoText="false" />
+        android:autoText="false"
+        android:editable="true" />
 
     <EditText
         android:layout_width="148dp"
